# CS224W

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  scrape.py
course/10-fast_neural_subgraph_matching/homework/: CS224W_Colab_0.ipynb
course/10-fast_neural_subgraph_matching/reading/: frequent-subgraph-mining.md  science.298.5594.md
course/13-advanced_topics_in_gnns/homework/: CS224W_Colab_0.ipynb
course/15-scaling_to_large_graphs/homework/: CS224W_Colab_0.ipynb
course/16-snap_lectures/reading/: 1706.08566  1802.08219  2102.03150  forum.md
course/18-algorithmic_reasoning_with_gnns/reading/: lime.md
course/2-node_embeddings/homework/: CS224W_Colab_0.ipynb  CS224W_Colab_1.ipynb
course/3-graph_neural_networks/reading/: 3717.md
course/6-theory_of_gnns/homework/: CS224W_Colab_0.ipynb
notebooks/: scrape.ipynb
old/Assignment/: CS224W_Colab_0_2.ipynb  CS224W_Colab_1.ipynb  CS224W_Colab_2 (1).ipynb  CS224W_Colab_2_my_Comment.ipynb  CS224W_Colab_3 (1).ipynb  CS224W_Colab_3_MyComment_1.ipynb  CS224W_Colab_3_MyComment_2 (1).ipynb  CS224W_Colab_4 (1).ipynb  CS224W_Colab_5 (1).ipynb  CS224W_Colab_5_my_comment_1.ipynb  CS224W_Colab_5_my_comment_2.ipynb
old/GCN_from_scratch/: GCN_from_scratch.ipynb
old/Original/: CS224W_Colab_0.ipynb  CS224W_Colab_2 (2).ipynb  CS224W_Colab_5 (1).ipynb
