[tool.poetry]
name = "cs224w"
version = "0.1.0"
description = ""
authors = ["Matthew Billman <mgbvox@gmail.com>"]
readme = "README.md"
packages = [
    {"include" = "gnn", "from"="src"}
]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
lxml = "^5.3.0"
beautifulsoup4 = "^4.12.3"
aiohttp = "^3.10.10"
aiofiles = "^24.1.0"
ruff = "^0.7.3"
mypy = "^1.13.0"
httpx = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

